--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.1",
     "@nuxt/icon": "^1.12.0",
+    "@nuxt/image": "^1.10.0",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "eslint": "^9.24.0",
@@ -23,6 +25,14 @@
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge"
+    "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "msw": "^2.7.6"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
