--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "msw": "^2.7.6"
+    "msw": "^2.7.6",
+    "vue-i18n-extract": "^2.0.7"
   },
   "msw": {
     "workerDirectory": [
