feat(doctors): add doctor coverage map

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "dayjs": "^1.11.13",
     "eslint": "^9.24.0",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
