--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
     "@pinia/nuxt": "^0.11.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.4",
     "dayjs": "^1.11.13",
     "eslint": "^9.24.0",
     "leaflet": "^1.9.4",
     "nuxt": "^3.16.2",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
@@ -35,6 +37,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.4",
     "msw": "^2.7.6",
     "vue-i18n-extract": "^2.0.7"
   },
